⚠️ Suppress JVM warnings (#562)